Fixing z-index of global overlay

--- a/web/app/themes/plantchicago/assets/styles/components/_base.scss
+++ b/web/app/themes/plantchicago/assets/styles/components/_base.scss
@@ -83,7 +83,7 @@ img {
   left: 0;
   right: 0;
   bottom: 0;
-  z-index: 1;
+  z-index: 2;
   display: none;
   position: fixed;
   background: rgba($black,.5);
